added resume link

--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: BizPage
-    Theme URL: https://bootstrapmade.com/bizpage-bootstrap-business-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
@@ -587,7 +581,7 @@
           <li><a href="#facts">Facts</a></li>
           <li><a href="#blogs">Blogs</a></li>
           <li><a href="#songs">Songs</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="https://drive.google.com/uc?export=download&id=1LRjCy6XmVbJhP0vKrEZ1jutXgXF8NBTP">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -663,7 +657,7 @@
               <div class="carousel-content">
                 <h2>Singer-songwriter</h2>
                 <p>I like to write, compose, and perform my own musical material, including lyrics and melodies. I have released two of my albums - Buzzzzzzz & thegenuinegourav. Besides this, I like to make cover of different artists on Smule App.</p>
-                <a href="http://www.smule.com/GouravSuri" target="_blank" class="btn-get-started scrollto">Listen & Enjoy</a>
+                <a href="http://www.smule.com/GouravSuri" target="_blank" class="btn-get-started scrollto">Listen & Enjoy Covers</a>
               </div>
             </div>
           </div>
@@ -790,7 +784,7 @@
               <h2 class="title"><a href="https://www.adurcup.com/" target="_blank">Android Developer Intern</a></h2>
               <h6>December '16 - January '17</h6>
               <p>
-                Adurcup is one stop shop for all the major backend needs of the restaurant. Worked as an Android Develoeper to provide a singular android app platform for the restaurants to 'Manage' their daily operations, 'Interact' with their subordinates and 'Transact' in the needed areas.
+                Adurcup is one stop shop for all the major backend needs of the restaurant. Worked as an Android Developer to provide a singular android app platform for the restaurants to 'Manage' their daily operations, 'Interact' with their subordinates and 'Transact' in the needed areas.
               </p>
             </div>
           </div>
@@ -872,11 +866,6 @@
           <button type="button" class="btn btn-dark wow fadeInLeft" data-wow-delay="0.2s">Yaml</button>
           <button type="button" class="btn btn-warning wow fadeInRight" data-wow-delay="0.2s">Bootstrap</button>
           <button type="button" class="btn btn-primary wow slideInDown" data-wow-delay="0.2s">System Design</button>
-          <!-- <div class="progress">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Frontend  { HTML | CSS | Bootstrap | JavaScript } <i class="val">100%</i></span>
-            </div>
-          </div> -->
         </div>
 
       </div>
@@ -1320,7 +1309,7 @@
         </div>
       </div>
 
-    </section><!-- #portfolio -->
+    </section><!-- #projects -->
 
     <!--==========================
       Awards Section
@@ -1369,7 +1358,7 @@
         </div>
 
       </div>
-    </section><!-- #services -->
+    </section><!-- #awards -->
 
     <!--==========================
       Facts Section
@@ -1464,7 +1453,7 @@
         </div>
 
       </div>
-    </section><!-- #team -->
+    </section><!-- #blogs -->
 
 
     <!--==========================
@@ -1555,11 +1544,6 @@
       <div class="container">
         <div class="row">
 
-          <!-- <div class="col-lg-3 col-md-6 footer-info">
-            <h3>BizPage</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
-          </div> -->
-
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
@@ -1578,7 +1562,7 @@
               <li><i class="ion-ios-arrow-right"></i> <a href="#facts">Facts</a></li>
               <li><i class="ion-ios-arrow-right"></i> <a href="#blogs">Blogs</a></li>
               <li><i class="ion-ios-arrow-right"></i> <a href="#songs">Songs</a></li>
-              <li><i class="ion-ios-arrow-right"></i> <a href="#">Resume</a></li>
+              <li><i class="ion-ios-arrow-right"></i> <a href="https://drive.google.com/uc?export=download&id=1LRjCy6XmVbJhP0vKrEZ1jutXgXF8NBTP">Resume</a></li>
             </ul>
           </div>
 
