added travnav playstore link

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <!-- Modal footer -->
         <div class="modal-footer">
           <a href="https://www.youtube.com/watch?v=_qQVurgULgk" target="_blank"><button type="button" class="btn btn-outline-dark">Demo Video</button></a>
-          <a href="https://github.com/thegenuinegourav/TravNav" target="_blank"><button type="button" class="btn btn-secondary">View Project</button></a>
+          <a href="https://play.google.com/store/apps/details?id=thegenuinegourav.travnav" target="_blank"><button type="button" class="btn btn-secondary">View Project</button></a>
         </div>
       </div>
     </div>
@@ -1277,10 +1277,10 @@
               <figure>
                 <img src="img/projects/travnav.jpg" class="img-fluid" alt="">
                 <a class="link-preview" title="Preview" data-toggle="modal" data-target="#travnav"><i class="ion ion-eye"></i></a>
-                <a href="https://github.com/thegenuinegourav/TravNav" target="_blank" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a href="https://play.google.com/store/apps/details?id=thegenuinegourav.travnav" target="_blank" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
               <div class="portfolio-info">
-                <h4><a href="https://github.com/thegenuinegourav/TravNav" target="_blank">TravNav</a></h4>
+                <h4><a href="https://play.google.com/store/apps/details?id=thegenuinegourav.travnav" target="_blank">TravNav</a></h4>
                 <span class="label label-primary">Android</span>
                 <span class="label label-primary">Maps</span>
                 <span class="label label-primary">Travlling Salesman Problem</span>
