added sampattiplanning and passwordpasstwopointo projects

--- a/index.html
+++ b/index.html
@@ -558,6 +558,51 @@
     </div>
   </div>
 
+  <!-- Password Pass 2.0 Model -->
+  <div class="modal fade" id="passwordpasstwopointo">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Password Pass 2.0</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <!-- Modal body -->
+        <div class="modal-body">
+          A very unique app which can help you to create & learn strong passwords for your different social handles and accounts.
+        </div>
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <a href="https://www.youtube.com/watch?v=_Oqw6KBJkqw" target="_blank"><button type="button" class="btn btn-outline-dark">Trailer Video</button></a>
+          <a href="https://play.google.com/store/apps/details?id=thegenuinegourav.passwordpasstwopointo" target="_blank"><button type="button" class="btn btn-secondary">View Project</button></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Sampatti Planning Model -->
+  <div class="modal fade" id="sampattiplanning">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Sampatti Planning</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <!-- Modal body -->
+        <div class="modal-body">
+          Designed website for sampatti planning organisation as per their requirements using material design guidelines and bootstrap framework.
+        </div>
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <a href="https://sampattiplanning.github.io/" target="_blank"><button type="button" class="btn btn-outline-dark">Live Website</button></a>
+          <a href="https://github.com/sampattiplanning/sampattiplanning.github.io" target="_blank"><button type="button" class="btn btn-secondary">View Project</button></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!--==========================
     Header
   ============================-->
@@ -1305,6 +1350,37 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-playstore wow fadeInUp">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img/projects/passwordpasstwopointo.jpg" class="img-fluid" alt="">
+                <a class="link-preview" title="Preview" data-toggle="modal" data-target="#passwordpasstwopointo"><i class="ion ion-eye"></i></a>
+                <a href="https://play.google.com/store/apps/details?id=thegenuinegourav.passwordpasstwopointo" target="_blank" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+              <div class="portfolio-info">
+                <h4><a href="https://play.google.com/store/apps/details?id=thegenuinegourav.passwordpasstwopointo" target="_blank">Password Pass 2.0</a></h4>
+                <span class="label label-primary">Android</span>
+                <span class="label label-primary">OpenCV</span>
+                <span class="label label-primary">Material Design</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="img/projects/sampattiplanning.jpg" class="img-fluid" alt="">
+                <a class="link-preview" title="Preview" data-toggle="modal" data-target="#sampattiplanning"><i class="ion ion-eye"></i></a>
+                <a href="https://sampattiplanning.github.io/" target="_blank" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+              <div class="portfolio-info">
+                <h4><a href="https://sampattiplanning.github.io/" target="_blank">Sampatti Planning</a></h4>
+                <span class="label label-primary">Bootstrap</span>
+                <span class="label label-primary">HTML</span>
+                <span class="label label-primary">CSS</span>
+              </div>
+            </div>
+          </div>
 
         </div>
       </div>
