added funding socieites experience

--- a/index.html
+++ b/index.html
@@ -765,10 +765,27 @@
 
         <header class="section-header">
           <h3>Experience</h3>
-          <p>Hi there, My name is Gourav Suri. I'm currently working as a Full Stack Developer at Credit Saison India. My job includes architecting the solution for new upcoming fintech features, designing micro-services and their APIs, getting up cloud infrastructure and deployments, recruiting some of the best minds for our engineering team & coding java, springboot, golang, vuejs, aws and python services.</p>
+          <p>Hi there, My name is Gourav Suri. I'm currently working as a Senior Software Engineer Developer at Funding Societies Singapore. I'm architecting the solution for new upcoming features as proposed by the product managers. I'm also responsible for designing micro-services, developing their APIs and automating cloud infrastructure with their deployments. I'm also accountable for recruiting some of the best minds for the engineering team. During my experience, I have worked in following multiple technologies & languages as java, go, python, ruby, node, c++, javascript, aws, springboot, android, express, etc.
+          </p>
         </header>
 
         <div class="row about-cols">
+
+          <div class="col-md-4 wow fadeInUp">
+            <div class="about-col">
+              <div class="img">
+                <img src="img/experience/fundingsocieties.jpg" alt="" class="img-fluid">
+                <div class="icon">
+                  <i><ion-icon name="logo-bitcoin"></ion-icon></i>
+                </div>
+              </div>
+              <h2 class="title"><a href="https://fundingsocieties.com/" target="_blank">Senior Software Engineer</a></h2>
+              <h6>December '20 - Present</h6>
+              <p>
+                Writing a new architecture for camunda workflow to orchestrate underwriting process for different loan products across Singapore, Indonesia, Malaysia & Thailand market.
+              </p>
+            </div>
+          </div>          
 
           <div class="col-md-4 wow fadeInUp">
             <div class="about-col">
@@ -778,10 +795,10 @@
                   <i><ion-icon name="logo-react"></ion-icon></i>
                 </div>
               </div>
-              <h2 class="title"><a href="http://www.creditsaison.in/" target="_blank">Full Stack Developer</a></h2>
-              <h6>December '18 - Present</h6>
+              <h2 class="title"><a href="http://www.creditsaison.in/" target="_blank">Software Engineer II</a></h2>
+              <h6>December '18 - December '20</h6>
               <p>
-                Working as a Full Stack Engineer to develop core softwares, independent services & module packages which can fulfill corporate social responsibility by striving to meet the expectations of all of the customers, shareholders and business partners.
+                Architected, designed & developed core softwares, independent services & module packages which fulfilled corporate social responsibility by striving to meet the expectations of all of the customers, shareholders and business partners.
               </p>
             </div>
           </div>
@@ -905,9 +922,10 @@
           <button type="button" class="btn btn-danger wow slideInUp" data-wow-delay="0.2s">PHP</button>
           <button type="button" class="btn btn-dark wow slideInDown" data-wow-delay="0.2s">JSON</button>
           <button type="button" class="btn btn-info wow slideInRight" data-wow-delay="0.2s">Rails</button>
-          <button type="button" class="btn btn-danger wow fadeInDown" data-wow-delay="0.2s">Ruby</button>
           <button type="button" class="btn btn-success wow zoomIn" data-wow-delay="0.2s">Serverless Application Model</button>
+          <button type="button" class="btn btn-info wow fadeInDown" data-wow-delay="0.2s">Nodejs</button>
 
+          <button type="button" class="btn btn-danger wow fadeInDown" data-wow-delay="0.2s">Ruby</button>
           <button type="button" class="btn btn-dark wow fadeInLeft" data-wow-delay="0.2s">Yaml</button>
           <button type="button" class="btn btn-warning wow fadeInRight" data-wow-delay="0.2s">Bootstrap</button>
           <button type="button" class="btn btn-primary wow slideInDown" data-wow-delay="0.2s">System Design</button>
