--- a/index.html
+++ b/index.html
@@ -765,11 +765,27 @@
 
         <header class="section-header">
           <h3>Experience</h3>
-          <p>Hi there, My name is Gourav Suri. I'm currently working as a Senior Software Engineer Developer at Funding Societies Singapore. I'm architecting the solution for new upcoming features as proposed by the product managers. I'm also responsible for designing micro-services, developing their APIs and automating cloud infrastructure with their deployments. I'm also accountable for recruiting some of the best minds for the engineering team. During my experience, I have worked in following multiple technologies & languages as java, go, python, ruby, node, c++, javascript, aws, springboot, android, express, etc.
+          <p>Hi there, My name is Gourav Suri. I'm currently working as a Software Engineer 3 at Grab. I'm architecting the solution for new upcoming features as proposed by the product managers. I'm also responsible for designing micro-services, developing their APIs and automating cloud infrastructure with their deployments. I'm also accountable for recruiting some of the best minds for the engineering team. During my experience, I have worked in following multiple technologies & languages as java, go, python, ruby, node, c++, javascript, aws, springboot, android, express, etc.
           </p>
         </header>
 
         <div class="row about-cols">
+
+          <div class="col-md-4 wow fadeInUp">
+            <div class="about-col">
+              <div class="img">
+                <img src="img/experience/grab.png" alt="" class="img-fluid">
+                <div class="icon">
+                  <i><ion-icon name="car-sport"></ion-icon></i>
+                </div>
+              </div>
+              <h2 class="title"><a href="https://www.grab.com/" target="_blank">Software Engineer III</a></h2>
+              <h6>March '21 - Present</h6>
+              <p>
+                Building Lending products for Grab audience including passengers, drivers & merchants. Designing solutions for Paylater, PostPaid Bills, Repayments & other loan management and risk analysis system scalable enough to target current grab 100M+ userbase.
+              </p>
+            </div>
+          </div>  
 
           <div class="col-md-4 wow fadeInUp">
             <div class="about-col">
@@ -780,9 +796,9 @@
                 </div>
               </div>
               <h2 class="title"><a href="https://fundingsocieties.com/" target="_blank">Senior Software Engineer</a></h2>
-              <h6>December '20 - Present</h6>
+              <h6>December '20 - March '21</h6>
               <p>
-                Writing a new architecture for camunda workflow to orchestrate underwriting process for different loan products across Singapore, Indonesia, Malaysia & Thailand market.
+                Wrote a new architecture for camunda workflow to orchestrate underwriting process for different loan products across Singapore, Indonesia, Malaysia & Thailand market.
               </p>
             </div>
           </div>          
@@ -1583,9 +1599,9 @@
 
           <div class="col-md-4">
             <div class="contact-phone">
-              <i class="ion-ios-telephone-outline"></i>
-              <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+91 8800434677</a></p>
+              <i class="ion-social-linkedin-outline"></i>
+              <h3>Linkedin</h3>
+              <p><a href="https://in.linkedin.com/in/gourav96suri">in.linkedin.com/in/gourav96suri</a></p>
             </div>
           </div>
 
@@ -1666,7 +1682,7 @@
               Street No. 6, Preet Vihar <br>
               New Delhi, 110051<br>
               India <br>
-              <strong>Phone:</strong> +91 8800434677<br>
+              <strong>Linkedin:</strong> gourav96suri<br>
               <strong>Email:</strong> gourav96suri@gmail.com<br>
             </p>
 
